gitops/pirate/minio.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: object-storage
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: object-storage
spec:
  selector:
    app.kubernetes.io/name: minio
  ports:
    - name: api
      port: 9000
      targetPort: api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: object-storage
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: minio
  template:
    metadata:
      labels:
        app.kubernetes.io/name: minio
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
        fsGroup: 1000
      containers:
        - name: minio
          image: quay.io/minio/minio:RELEASE.2024-06-13T22-53-53Z
          args: [server, /data, --console-address, ":9001"]
          ports:
            - name: api
              containerPort: 9000
            - name: console
              containerPort: 9001
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
            runAsNonRoot: true
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          emptyDir: {}
